...
    } finally {
      setIsSubmitting(false);
    }
  };

  return (
    <View testID="onboarding-multidevice-connect-form">
      <RadioButton.Group
        onValueChange={value =>
          handleLoginModeChange(value as ConnectLoginMode)
        }
        value={loginMode}
      >
...
                  selected && styles.loginModeOptionSelected,
                ]}
                accessibilityRole="radio"
                accessibilityState={{ selected }}
                testID={
                  option.value === 'admin'
                    ? 'onboarding-multidevice-connect-admin'
                    : 'onboarding-multidevice-connect-member'
                }
              >
                <RadioButton value={option.value} color={Colors.blue600} />
                <Text
                  variant="bodyMedium"
                  weight="bold"
...
