...
    ),
    [isChild],
  );

  return (
    <SafeAreaBgImage includeBottomInset={false}>
      <View testID="tasks-screen" style={styles.tasksScreen}>
      <ScreenHeaderWithLogo containerStyle={{ backgroundColor: 'transparent' }} />
      {!currentUser ? (
        <SelectUserPrompt />
      ) : (
        <View style={styles.container}>
          <TaskCalendarHeader
...
